[metadata]
name = kanachan
version = 0.0.1
description = Mahjong AI for Mahjong Soul (雀魂)
author = Cryolite
author_email = cryolite.indigo@gmail.com
url = https://github.com/Cryolite/kanachan

[options]
include_package_data = True
packages = find:
install_requires =
    hydra-core
    jsonschema
    mahjong==1.1.11
    pyyaml
    tensorboard
    tqdm

[options.package_data]
* = *.so
