[metadata]
name = kanachan
version = 0.1.0
description = A Japanese (Riichi) Mahjong AI Framework
author = Cryolite
author_email = cryolite.indigo@gmail.com
url = https://github.com/Cryolite/kanachan

[options]
include_package_data = True
packages = find:
install_requires =
    hydra-core
    jsonschema
    mahjong==1.1.11
    pyyaml
    tensorboard
    tensordict
    torchrl
    tqdm

[options.package_data]
* = *.so
